Optimize VPN service for battery and heat management
- Refactor SocksForwarder to use a fixed thread pool (16 threads) instead of manual thread creation.
- Increase I/O pipe buffer size from 4KB to 16KB to reduce system call overhead.
- Reduce default core count for native tunnel processes from 4 to 2.
- Implement a tiered process termination strategy in Utility.killPidFile.